Fixing library button's text alignment

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -31,12 +31,17 @@
     border: none;
     padding: 8px 10px;
     margin: 5px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button--primary {
     position: relative;
     background: var(--accent-color);
     color: var(--main-foreground);
+
 }
 
 .button--secondary {
